src/tess/tl/test/fail/test_fail_nested_module_no_immediate_parent.tl
#module Foo
f1() { 1 }

// Foo.Bar.Baz without declaring Foo.Bar first
#module Foo.Bar.Baz
f2() { 2 }

#module main
main() { Foo.f1() + Foo.Bar.Baz.f2() }
